--- a/styles.css
+++ b/styles.css
@@ -326,8 +326,9 @@ img {
 /* Buttons */
 .button {
   display: inline-block;
-  background-color: var(--first-color);
+  text-align: center;
   color: #fff;
+  background-color: var(--first-color);
   padding: 0.75rem 1rem;
   border-radius: 0.5rem;
   transition: 0.3s;
@@ -465,6 +466,7 @@ img {
 .footer_container {
   grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   row-gap: 2rem;
+  /* box-shadow: 4px 0px 4px var(--shadow-color); */
 }
 
 .footer_logo {
